--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                    <section class="formulario">
                       <p id="sistema">Sistema Métrico</p>
                       <form name="frmimc" action="#" method="get">
-                      <input type="text" name="txtestatura" placeholder="Cuanto mides?" id="caja" required/>
+                      <input type="text" name="txtestatura" placeholder="Ingrese su estatura?" id="caja" required/>
                       <p>Estatura en centímetros</p>
-                      <input type="text" name="txtpeso" placeholder="Cuanto pesas?" id="caja" required/>
+                      <input type="text" name="txtpeso" placeholder="Ingrese su peso?" id="caja" required/>
                       <p>Peso en Kilogramos</p>
                       <button type="button" name="btncalcular" id="boton" onclick="imc(frmimc);" >Calcular</button>
                       <button type="reset" name="btnlimpiar" id="boton">Limpiar Datos</button>
